network.tf
  resource "google_compute_network" "vpc_network" {
    name                    = var.vpc_name
    auto_create_subnetworks = false
  }

  resource "google_compute_subnetwork" "subnetwork" {
    name          = var.subnet_name
    ip_cidr_range = var.subnet_ip
    region        = var.region
    network       = google_compute_network.vpc_network.self_link
  }
